{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 1027,
  "lineage": "147a6573-4f69-a9e4-8d54-3a871494aba6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03aac205d9db3c59e",
            "arn": "arn:aws:ec2:ap-south-1:381144738155:instance/i-09965c94db613e4a4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3_access",
            "id": "i-09965c94db613e4a4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pkey",
            "monitoring": false,
            "primary_network_interface_id": "eni-0726686f92516456a",
            "private_dns": "ip-10-1-1-196.ap-south-1.compute.internal",
            "private_ip": "10.1.1.196",
            "public_dns": "ec2-13-234-32-174.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.32.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06bb1002795fcb105",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6e0f76b21de331a",
            "tags": {
              "Name": "wordpress-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00835fef1f742c12e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3_access_profile",
            "aws_iam_role.s3_access",
            "aws_security_group.publicsg",
            "aws_subnet.public_subnet",
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08157882c05a6e54b",
            "owner_id": "381144738155",
            "tags": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-02c60c418d9359c1e"
          },
          "dependencies": [
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wp_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:loadbalancer/app/wp-lb/c89d2a0b3dbd7c70",
            "arn_suffix": "app/wp-lb/c89d2a0b3dbd7c70",
            "dns_name": "wp-lb-503643898.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:loadbalancer/app/wp-lb/c89d2a0b3dbd7c70",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wp-lb",
            "security_groups": [
              "sg-00835fef1f742c12e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b8d74f377b944663"
              },
              {
                "subnet_id": "subnet-0f6e0f76b21de331a"
              }
            ],
            "subnets": [
              "subnet-0b8d74f377b944663",
              "subnet-0f6e0f76b21de331a"
            ],
            "tags": {
              "Name": "Wp-LoadBalancer"
            },
            "vpc_id": "vpc-02c60c418d9359c1e",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.publicsg",
            "aws_subnet.public_subnet",
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:listener/app/wp-lb/c89d2a0b3dbd7c70/df0a6ea16614d317",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:targetgroup/lb-tg/dfbf3f15ad5b13b5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:listener/app/wp-lb/c89d2a0b3dbd7c70/df0a6ea16614d317",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:loadbalancer/app/wp-lb/c89d2a0b3dbd7c70",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.wp_lb",
            "aws_lb_target_group.tg-lb",
            "aws_security_group.publicsg",
            "aws_subnet.public_subnet",
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:targetgroup/lb-tg/dfbf3f15ad5b13b5",
            "arn_suffix": "targetgroup/lb-tg/dfbf3f15ad5b13b5",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:targetgroup/lb-tg/dfbf3f15ad5b13b5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02c60c418d9359c1e"
          },
          "dependencies": [
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targetgroupatt",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:targetgroup/lb-tg/dfbf3f15ad5b13b5-20200325175109446200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:targetgroup/lb-tg/dfbf3f15ad5b13b5",
            "target_id": "i-09965c94db613e4a4"
          },
          "dependencies": [
            "aws_iam_instance_profile.s3_access_profile",
            "aws_iam_role.s3_access",
            "aws_instance.dev_instance",
            "aws_lb_target_group.tg-lb",
            "aws_security_group.publicsg",
            "aws_subnet.public_subnet",
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a9ec05c69b4b7007",
            "owner_id": "381144738155",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route"
            },
            "vpc_id": "vpc-02c60c418d9359c1e"
          },
          "dependencies": [
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e15a762889bacba6",
            "owner_id": "381144738155",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08157882c05a6e54b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route"
            },
            "vpc_id": "vpc-02c60c418d9359c1e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e39c27af67e64e3f",
            "route_table_id": "rtb-0a9ec05c69b4b7007",
            "subnet_id": "subnet-0e4ee300e721034dc"
          },
          "dependencies": [
            "aws_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_vpc.publicvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003ee1b3e026cfaee",
            "route_table_id": "rtb-0a9ec05c69b4b7007",
            "subnet_id": "subnet-0cde38d20a2c48cfe"
          },
          "dependencies": [
            "aws_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e2658620bf8799f",
            "route_table_id": "rtb-0e15a762889bacba6",
            "subnet_id": "subnet-0f6e0f76b21de331a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.publicvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fac7a613b46aa78d",
            "route_table_id": "rtb-0e15a762889bacba6",
            "subnet_id": "subnet-0b8d74f377b944663"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:security-group/sg-0e212d89e89c7b471",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e212d89e89c7b471",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devsg",
            "name_prefix": null,
            "owner_id": "381144738155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c60c418d9359c1e"
          },
          "dependencies": [
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privatesg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:security-group/sg-037a245bb338e6b99",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037a245bb338e6b99",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "privatesg",
            "name_prefix": null,
            "owner_id": "381144738155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PrivateSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c60c418d9359c1e"
          },
          "dependencies": [
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:security-group/sg-00835fef1f742c12e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00835fef1f742c12e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "publicsg",
            "name_prefix": null,
            "owner_id": "381144738155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PublicSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c60c418d9359c1e"
          },
          "dependencies": [
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rdsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:security-group/sg-089e17c1f42af4160",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-089e17c1f42af4160",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00835fef1f742c12e",
                  "sg-037a245bb338e6b99",
                  "sg-0e212d89e89c7b471"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rdsg",
            "name_prefix": null,
            "owner_id": "381144738155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c60c418d9359c1e"
          },
          "dependencies": [
            "aws_security_group.devsg",
            "aws_security_group.privatesg",
            "aws_security_group.publicsg",
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:subnet/subnet-0e4ee300e721034dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0e4ee300e721034dc",
            "map_public_ip_on_launch": false,
            "owner_id": "381144738155",
            "tags": {
              "Name": "Private_Subnet_1"
            },
            "vpc_id": "vpc-02c60c418d9359c1e"
          },
          "dependencies": [
            "aws_vpc.publicvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:subnet/subnet-0cde38d20a2c48cfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-0cde38d20a2c48cfe",
            "map_public_ip_on_launch": false,
            "owner_id": "381144738155",
            "tags": {
              "Name": "Private_Subnet_2"
            },
            "vpc_id": "vpc-02c60c418d9359c1e"
          },
          "dependencies": [
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:subnet/subnet-0f6e0f76b21de331a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0f6e0f76b21de331a",
            "map_public_ip_on_launch": true,
            "owner_id": "381144738155",
            "tags": {
              "Name": "Public_Subnet_1"
            },
            "vpc_id": "vpc-02c60c418d9359c1e"
          },
          "dependencies": [
            "aws_vpc.publicvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:subnet/subnet-0b8d74f377b944663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0b8d74f377b944663",
            "map_public_ip_on_launch": true,
            "owner_id": "381144738155",
            "tags": {
              "Name": "Public_Subnet_2"
            },
            "vpc_id": "vpc-02c60c418d9359c1e"
          },
          "dependencies": [
            "aws_vpc.publicvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "publicvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:vpc/vpc-02c60c418d9359c1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-07d28835b0fc04850",
            "default_route_table_id": "rtb-04fc15fbd2b666b1a",
            "default_security_group_id": "sg-0dd45c781430363cf",
            "dhcp_options_id": "dopt-c550b2ae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02c60c418d9359c1e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04fc15fbd2b666b1a",
            "owner_id": "381144738155"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "52.219.64.0/22"
            ],
            "id": "vpce-0d988f5332784e8bf",
            "owner_id": "381144738155",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0a9ec05c69b4b7007",
              "rtb-0e15a762889bacba6"
            ],
            "service_name": "com.amazonaws.ap-south-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-02c60c418d9359c1e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.private_route",
            "aws_route_table.public_route",
            "aws_vpc.publicvpc"
          ]
        }
      ]
    }
  ]
}